Added revision number

--- a/konyv.tex
+++ b/konyv.tex
@@ -50,7 +50,7 @@
 \begin{center}
   \small
   Salvi Péter: Oldd meg Prologban!\\
-  Budapest, 2022\\
+  Budapest, 2022 (\input{revision}verzió)\\
   \bigskip
   A könyv a Creative Commons \emph{Share Alike} licencnek megfelelően
   szabadon terjeszthető.
