--- a/lesson1.tex
+++ b/lesson1.tex
@@ -1,7 +1,34 @@
+% -*- fill-column: 50 -*-
+% (local-set-key (kbd "C-c C-f") 'display-fill-column-indicator-mode)
+
 \chapter{Ismerkedés}
 \section{Tények és szabályok}
-Blabla
+ Lorem ipsum dolor sit amet, consectetur
+ adipiscing elit. Aliquam vestibulum augue ac mi
+ aliquet, eget scelerisque felis gravida. Integer
+ eleifend placerat suscipit. Nam nec turpis sed
+ odio imperdiet vulputate ut at tortor. Sed a ex
+ odio. Morbi vitae dui leo. Aenean sollicitudin
+ sed dolor vel rhoncus.
+
 \index{tény}
 \index{szabály}
+\begin{prolog}
+próba(X) :- foo(X), bar(X).
+123456789012345678901234567890123456789012345678901
+         1         2         3         4         5 
+\end{prolog}
+Blabla
+\begin{problem}
+  Csináld meg!
+\end{problem}
+\begin{infobox}{foo és bar}
+  Érdekes infók Sed at magna at sem tempus
+  mattis. Duis et quam sed metus vestibulum
+  vulputate eget id eros. Curabitur vel consequat
+  purus. Etiam finibus, augue et hendrerit
+  imperdiet, mi mauris aliquam tortor, ultrices
+  interdum sem augue sed diam.
+\end{infobox}
 \section{Projekt: bla}
 Blabla
