--- a/lesson1.tex
+++ b/lesson1.tex
@@ -22,7 +22,7 @@ Blabla
 \begin{problem}
   Csináld meg!
 \end{problem}
-\begin{infobox}{foo és bar}
+\begin{infobox}{.75}{foo és bar}
   Érdekes infók Sed at magna at sem tempus
   mattis. Duis et quam sed metus vestibulum
   vulputate eget id eros. Curabitur vel consequat
