--- a/konyvajanlo.tex
+++ b/konyvajanlo.tex
@@ -1,1 +1,45 @@
-Blabla
+\chapter{Könyvajánló}
+Magyar nyelven nem sok minden jelent meg a Prologról, bár fontos
+megemlíteni a Szeredi Péter által fejlesztett \name{Mprolog}
+(\emph{Modular Prolog}) rendszerről szóló
+könyvet:
+\begin{itemize}
+\item[] Zs.~Farkas, I.~Futó, T.~Langer, P.~Szeredi, \emph{Mprolog
+programozási nyelv}, Műszaki Könyvkiadó, 1989.
+\end{itemize}
+Angolul már sokkal nagyobb a választék. A programozási készség
+elsajátításához a legfontosabb a gyakorlás; rengeteg érdekes feladat
+található az alábbiakban:
+\begin{itemize}
+\item[] H.~Coelho, J.~C.~Cotta, \emph{Prolog by Example---How to Learn, Teach and Use It}, Springer, 1988.
+\item[] B.~Demoen, Ph-L.~Nguyen, T.~Schrijvers, R.~Tron\c con, \emph{The First 10 Prolog Programming Contests}, Belgium, 2005.
+\end{itemize}
+Hatékony programok írásához sok hasznos és praktikus tanács-csal szolgál ez a könyv:
+\begin{itemize}
+\item[] R.~A.~O'Keefe, \emph{The Craft of Prolog}, MIT Press, 1990.
+\end{itemize}
+Nem maradhat ki a listából Ivan Bratko klasszikusa sem,
+ami bár elsősorban mesterséges intelligenciai algoritmusokról szól, de
+tartalmaz egy nagyszerű bevezetőt is a Prolog programozásba:
+\begin{itemize}
+\item[] I.~Bratko: \emph{Prolog Programming for Artificial Intelligence}, 4th Ed., Pearson, 2011.
+\end{itemize}
+(E könyv írásakor nagyrészt ennek a tankönyvnek a felépítését követtem.)
+
+\bigskip
+\begin{center}
+\rule{0.5\textwidth}{.5pt}
+\end{center}
+\bigskip
+
+Bár nem kapcsolódik közvetlenül a Prolog programozáshoz, de egy
+rendkívül olvasmányos és változatos áttekintést ad a
+számítástechnikáról a Turing Omnibus:
+\begin{itemize}
+\item[] A.~K.~Dewdney, \emph{The (New) Turing Omnibus}, Freeman / Holt, 1993.
+\end{itemize}
+Végül pedig azoknak, akik komolyabban érdeklődnek a téma iránt, egy jó
+kiindulási pont a \emph{SICP} avagy a ,,varázslós könyv'':
+\begin{itemize}
+\item[] H.~Abelson, G.~J.~Sussman, J.~Sussman, \emph{Structure and Interpretation of Computer Programs}. MIT Press, 1996.
+\end{itemize}
