Converted lesson 1 from MarkDown

--- a/eloszo.tex
+++ b/eloszo.tex
@@ -47,6 +47,7 @@ fogad minket; ezzel jelzi, hogy várja a kérdést:
 \end{prolog}  
 Az első feladatunk, hogy betöltsük az általunk írt programot. Ezt
 általában a \pr{consult} paranccsal tehetjük meg, például:\index{{\tt consult}}
+\vspace{-1em} % hack
 \begin{prolog}
 ?- consult('/home/salvi/szabályok.pl').
 \end{prolog}
