--- a/konyvajanlo.tex
+++ b/konyvajanlo.tex
@@ -9,7 +9,7 @@ programozási nyelv}, Műszaki Könyvkiadó, 1989.
 \end{itemize}
 Angolul már sokkal nagyobb a választék. A programozási készség
 elsajátításához a legfontosabb a gyakorlás; rengeteg érdekes feladat
-található az alábbiakban:
+található (megoldásokkal!) az alábbiakban:
 \begin{itemize}
 \item[] H.~Coelho, J.~C.~Cotta, \emph{Prolog by Example---How to Learn, Teach and Use It}, Springer, 1988.
 \item[] B.~Demoen, Ph-L.~Nguyen, T.~Schrijvers, R.~Tron\c con, \emph{The First 10 Prolog Programming Contests}, Belgium, 2005.
@@ -19,12 +19,12 @@ Hatékony programok írásához sok hasznos és praktikus tanács-csal szolgál 
 \item[] R.~A.~O'Keefe, \emph{The Craft of Prolog}, MIT Press, 1990.
 \end{itemize}
 Nem maradhat ki a listából Ivan Bratko klasszikusa sem,
-ami bár elsősorban mesterséges intelligenciai algoritmusokról szól, de
+ami bár elsősorban mesterséges intelligenciai algoritmusokról szól, de emellett
 tartalmaz egy nagyszerű bevezetőt is a Prolog programozásba:
 \begin{itemize}
 \item[] I.~Bratko: \emph{Prolog Programming for Artificial Intelligence}, 4th Ed., Pearson, 2011.
 \end{itemize}
-(E könyv írásakor nagyrészt ennek a tankönyvnek a felépítését követtem.)
+(A leckék nagy vonalakban e könyv első részének felépítését követték.)
 
 \bigskip
 \begin{center}
@@ -32,9 +32,9 @@ tartalmaz egy nagyszerű bevezetőt is a Prolog programozásba:
 \end{center}
 \bigskip
 
-Bár nem kapcsolódik közvetlenül a Prolog programozáshoz, de egy
-rendkívül olvasmányos és változatos áttekintést ad a
-számítástechnikáról a Turing Omnibus:
+Bár a Prolog nyelvhez nem kapcsolódik közvetlenül, de egy rendkívül
+olvasmányos és változatos áttekintést ad a számítástechnikáról a
+Turing Omnibus:
 \begin{itemize}
 \item[] A.~K.~Dewdney, \emph{The (New) Turing Omnibus}, Freeman / Holt, 1993.
 \end{itemize}
