--- a/megoldasok.tex
+++ b/megoldasok.tex
@@ -1,2 +1,11 @@
-\chapter{Feladatok megoldásai}
-Blabla
+\chapter{A feladatok megoldásai}
+\subsubsection*{1. feladat}
+\begin{prolog}
+foo(X) :- bar(X).
+bar(X) :- baz(X).
+\end{prolog}
+\subsubsection*{2. feladat}
+\begin{prolog}
+foo(X) :- bar(X).
+bar(X) :- baz(X).
+\end{prolog}
