--- a/konyv.tex
+++ b/konyv.tex
@@ -11,6 +11,7 @@
 \usepackage{adjustbox}
 \usepackage{amsmath}
 \usepackage{fancyvrb}
+\usepackage[all]{genealogytree}
 \usepackage{imakeidx}
 \usepackage{pdfpages}
 \usepackage{storebox}
